[gd_scene load_steps=18 format=2]

[ext_resource path="res://dialogue/dialogue.gd" type="Script" id=1]
[ext_resource path="res://dialogue/images/default_background.png" type="Texture" id=2]
[ext_resource path="res://dialogue/fonts/font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://dialogue/images/textbox.png" type="Texture" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends Button

func _pressed ():
	for i in get_node(\"/root/Control\").nextActions:
		InputMap.action_add_event (\"next\", i)
	get_node (\"/root/Control/Panel\").show ()
	get_node (\"/root/Control/Menu\").hide ()
"

[sub_resource type="GDScript" id=2]
script/source = "extends Button

func _pressed ():
	get_node (\"/root/Control\").p = PopupPanel.new ()
	var i = ItemList.new ()
	var saves = get_node (\"/root/Control\").get_saves (OS.get_executable_path().get_base_dir())
	var save_date = \"\"
	var savedata = {}
	var f = File.new()
	

	i.set_custom_minimum_size (Vector2 (300, 100))
	#i.add_item (\"New Save\")
	#for x in get_node (\"/root/Control\").get_saves (OS.get_executable_path().get_base_dir()):
	#	i.add_item (x)
	for j in range(20):
		if (saves != []):
			if (saves[j] != \"\"):			
				if (f.open (OS.get_executable_path().get_base_dir()+\"/saves/\"+saves[j], File.READ) == OK):
					savedata = parse_json(f.get_line())
					if (savedata.date != null && savedata.date != \"\"):
						save_date = \": \"+savedata.date
					f.close()
				else:
					save_date = \" (*)\" #Failsafe in case get save time stamp failed
		i.add_item(\"Slot \"+String(j)+save_date)
		save_date = \" \"
	
	i.connect (\"item_activated\", get_node (\"/root/Control\"), \"_on_SaveList_ItemList_item_activated\")
	var v = VBoxContainer.new ()
	var h = HBoxContainer.new ()
	var b = Button.new ()
	b.set_text (\"OK\")
	var s = GDScript.new ()
	s.set_source_code (\"extends Button\\nfunc _pressed():\\n\\tget_node (\\\"/root/Control/Panel\\\").show ()\\n\\tget_node (\\\"/root/Control/Menu\\\").hide ()\\n\\tif get_parent ().get_parent ().get_child (0).get_selected_items ().size () == 1:\\n\\t\\tget_node (\\\"/root/Control\\\")._on_SaveList_ItemList_item_activated (get_parent ().get_parent ().get_child (0).get_selected_items ()[0])\")
	s.reload ()
	b.set_script (s)
	h.add_child (b)
	b = Button.new ()
	b.set_text (\"Cancel\")
	s = GDScript.new ()
	s.set_source_code (\"extends Button\\nfunc _pressed():\\n\\tget_node (\\\"/root/Control/Panel\\\").show ()\\n\\tget_node (\\\"/root/Control/Menu\\\").hide ()\\n\\tget_parent ().get_parent ().get_parent ().queue_free ()\")
	s.reload ()
	b.set_script (s)
	h.add_child (b)
	v.add_child (i)
	v.add_child (h)
	get_node (\"/root/Control\").p.add_child (v)
	add_child (get_node (\"/root/Control\").p)
	get_node (\"/root/Control\").p.popup_centered (Vector2 (100, 128))
"

[sub_resource type="GDScript" id=3]
script/source = "extends Button

func _pressed ():
	get_node (\"/root/Control\").p = PopupPanel.new ()
	var i = ItemList.new ()
	var saves = get_node (\"/root/Control\").get_saves (OS.get_executable_path().get_base_dir())
	var save_date = \"\"
	var savedata = {}
	var f = File.new()
	
	i.set_custom_minimum_size (Vector2 (300, 100))
	for j in range(20):
		if (saves != []):
			if (saves[j] != \"\"):
				if (f.open (OS.get_executable_path().get_base_dir()+\"/saves/\"+saves[j], File.READ) == OK):
					savedata = parse_json(f.get_line())
					if (savedata.date != null && savedata.date != \"\"):
						save_date = \": \"+savedata.date
					f.close()
				else:
					save_date = \" (*)\" #Failsafe in case get save time stamp failed
		i.add_item(\"Slot \"+String(j)+save_date)
		save_date = \"\"
	i.connect (\"item_activated\", get_node (\"/root/Control\"), \"_on_LoadList_ItemList_item_activated\")
	var v = VBoxContainer.new ()
	var h = HBoxContainer.new ()
	var b = Button.new ()
	b.set_text (\"OK\")
	var s = GDScript.new ()
	s.set_source_code (\"extends Button\\nfunc _pressed():\\n\\tget_node (\\\"/root/Control/Panel\\\").show ()\\n\\tget_node (\\\"/root/Control/Menu\\\").hide ()\\n\\tif get_parent ().get_parent ().get_child (0).get_selected_items ().size () == 1:\\n\\t\\tget_node (\\\"/root/Control\\\")._on_LoadList_ItemList_item_activated (get_parent ().get_parent ().get_child (0).get_selected_items ()[0])\")
	s.reload ()
	b.set_script (s)
	h.add_child (b)
	b = Button.new ()
	b.set_text (\"Cancel\")
	s = GDScript.new ()
	s.set_source_code (\"extends Button\\nfunc _pressed():\\n\\tget_node (\\\"/root/Control/Panel\\\").show ()\\n\\tget_node (\\\"/root/Control/Menu\\\").hide ()\\n\\tget_parent ().get_parent ().get_parent ().queue_free ()\")
	s.reload ()
	b.set_script (s)
	h.add_child (b)
	v.add_child (i)
	v.add_child (h)
	get_node (\"/root/Control\").p.add_child (v)
	add_child (get_node (\"/root/Control\").p)
	get_node (\"/root/Control\").p.popup_centered (Vector2 (100, 128)) # To accomidate buttons
"

[sub_resource type="GDScript" id=4]
script/source = "extends Button

func _pressed ():
	if true:
		var err = get_tree ().change_scene (\"menu/menu.tscn\")
		if err:
			print(\"Can't change scene!\")
	else:
		get_node (\"/root/Control/Panel\").show ()
		get_parent ().get_parent ().hide ()
"

[sub_resource type="Theme" id=5]

[sub_resource type="GDScript" id=6]
script/source = "extends Button

func _pressed():
	get_node(\"/root/Control\").next()
"

[sub_resource type="GDScript" id=7]
script/source = "extends TextureRect
"

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 12 )

[sub_resource type="ShortCut" id=8]

[sub_resource type="GDScript" id=9]
script/source = "extends Button

func _pressed ():
	get_parent ().get_parent ().next ()
"

[sub_resource type="GDScript" id=10]
script/source = "extends Button

func _pressed ():
	get_parent ().get_parent ().prev ()
	
"

[sub_resource type="GDScript" id=11]
script/source = "extends VBoxContainer
"

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
margin_left = 477.0
margin_top = 254.0
margin_right = 546.0
margin_bottom = 346.0
alignment = 1

[node name="Continue" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_right = 69.0
margin_bottom = 20.0
text = "Continue"
script = SubResource( 1 )

[node name="Save" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 69.0
margin_bottom = 44.0
text = "Save"
script = SubResource( 2 )

[node name="Load" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 69.0
margin_bottom = 68.0
disabled = true
text = "Load"
script = SubResource( 3 )

[node name="Exit" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 69.0
margin_bottom = 92.0
text = "Exit"
script = SubResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundSound" type="AudioStreamPlayer" parent="Panel"]

[node name="DialogueSound" type="AudioStreamPlayer" parent="Panel"]

[node name="PictNext" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
flat = true
script = SubResource( 6 )

[node name="BackgroundImage" type="TextureRect" parent="Panel/PictNext"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.14978
margin_bottom = -3.14978
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterControl" type="Control" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemControl" type="Control" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -600.0
margin_right = 512.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDialog" type="Label" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -22.0
grow_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -410.0
margin_top = -170.0
margin_right = 410.0
margin_bottom = -40.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTag" type="Label" parent="Panel/TextBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -388.653
margin_top = -115.0
margin_right = -228.653
margin_bottom = -86.0
theme = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/TextBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -365.0
margin_top = -84.0
margin_right = 375.0
margin_bottom = -23.0
bbcode_enabled = true
bbcode_text = "test"
text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNext" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -36.0
margin_top = -20.0
action_mode = 0
shortcut = SubResource( 8 )
text = ">>>"
script = SubResource( 9 )

[node name="ButtonPrev" type="Button" parent="Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 36.0
disabled = true
action_mode = 0
text = "<<<"
script = SubResource( 10 )

[node name="DialogueControl" type="VBoxContainer" parent="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -57.0
margin_right = 99.0
margin_bottom = 57.0
script = SubResource( 11 )
